--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,10 @@
 {
-  "include": ["./src/**/*"],
+  "include": [
+    "./src/**/*",
+    "test"
+  ],
   "compilerOptions": {
-    "target": "es2015",
-    "module": "CommonJS",
-    "outDir": "./dist"
+    "target": "ES5",
+    "module": "CommonJS"
   }
 }
