--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,8 @@
 {
-  "include": [
-    "./src/**/*",
-    "test"
-  ],
   "compilerOptions": {
-    "target": "ES5",
-    "module": "CommonJS"
+    "declaration": true,
+    "declarationDir": "./types",
+    "emitDeclarationOnly": true,
+    "rootDir": "./src"
   }
 }
