--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@encaik/abc",
-  "version": "0.0.6",
+  "version": "0.0.7",
   "description": "abc记谱法解析转换",
   "module": "dist/bundle.esm.js",
   "browser": "dist/bundle.umd.js",
@@ -9,7 +9,8 @@
   "scripts": {
     "watch": "rollup -c -w",
     "build": "npm run types && rollup -c",
-    "types": "tsc -b ./tsconfig.json"
+    "types": "tsc -b ./tsconfig.json",
+    "types:watch": "tsc -b ./tsconfig.json -w"
   },
   "devDependencies": {
     "@types/node": "^17.0.23",
