--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "@encaik/abc",
   "version": "0.0.8",
   "description": "abc记谱法解析转换",
+  "type": "module",
   "module": "dist/bundle.esm.js",
   "browser": "dist/bundle.umd.js",
   "main": "dist/bundle.esm.js",
@@ -14,21 +15,26 @@
     "watch": "rollup -c -w",
     "build": "npm run types && rollup -c",
     "types": "tsc -b ./tsconfig.json",
-    "types:watch": "tsc -b ./tsconfig.json -w"
+    "types:watch": "tsc -b ./tsconfig.json -w",
+    "test": "cross-env NODE_OPTIONS=--experimental-vm-modules npx jest"
   },
   "devDependencies": {
+    "@types/jest": "^29.0.2",
     "@types/node": "^17.0.23",
     "@typescript-eslint/eslint-plugin": "^5.17.0",
     "@typescript-eslint/parser": "^5.17.0",
+    "cross-env": "^7.0.3",
     "eslint": ">=5.16.0",
     "eslint-config-google": "^0.14.0",
     "eslint-config-prettier": "^8.5.0",
+    "jest": "^29.0.3",
     "prettier": "^2.6.1",
     "rollup": "^2.79.0",
     "rollup-plugin-commonjs": "^10.1.0",
     "rollup-plugin-dts": "^4.2.2",
     "rollup-plugin-node-resolve": "^5.2.0",
     "rollup-plugin-typescript": "^1.0.1",
+    "ts-jest": "^29.0.1",
     "tslib": "^2.4.0",
     "typescript": "^4.6.3"
   },
